<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorAccent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.44">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/genre"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/score"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>